--- a/website/vercel.json
+++ b/website/vercel.json
@@ -36,6 +36,9 @@
       }
     ],
     "functions": {
+      "users/**/*.js": {
+        "maxDuration": 30
+      },
       "api/*.js": {
         "memory": 128,
         "maxDuration": 10
