--- a/website/package.json
+++ b/website/package.json
@@ -10,12 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.5",
+    "@mui/x-charts": "^7.11.1",
+    "@mui/x-data-grid": "^7.11.1",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.25.1",
+    "react-virtuoso": "^4.7.13",
+    "splittext": "^2.0.0",
     "webfontloader": "^1.6.28",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz"
   },
